add tests to ensure the global sequencer works